Removed Confirm and created success banner

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A way to track who comes in for mentoring help and when">
-    <meta name="author" content="Dan Gude">
+    <meta name="author" content="SSE Projects">
 
     <title>Mentoring-Tracker</title>
 
@@ -16,11 +16,16 @@
     <style>
       body {
         padding-top: 54px;
+        zoom:170%;
       }
       @media (min-width: 992px) {
         body {
           padding-top: 56px;
         }
+      }
+      .btn-primary{
+          zoom:200%;
+          margin: 1em;
       }
 
     </style>
@@ -28,13 +33,9 @@
     <script>
         function myFunction() {
             var course = event.srcElement.innerHTML;
-            var submit = confirm("Submit " + course + "?");
-            if (submit == true) {
-
-                location.reload();
-            }
-            //document.getElementById("submit").innerHTML = "Thank you for submitting.";
-
+            //var submit = alert("Thank you for submitting.");
+            location.reload();
+            window.scrollTo(-100, -100);
         }
     </script>
 
@@ -65,6 +66,10 @@
 
     <!-- Page Content -->
     <div class="container">
+        <div class="alert alert-success alert-dismissable fadein">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+            Thank you for submitting.
+        </div>
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">Mentoring-Tracker</h1>
