--- a/index.html
+++ b/index.html
@@ -12,32 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <style>
-      body {
-        padding-top: 54px;
-        zoom:170%;
-      }
-      @media (min-width: 992px) {
-        body {
-          padding-top: 56px;
-        }
-      }
-      .btn-primary{
-          zoom:200%;
-          margin: 1em;
-      }
-
-    </style>
-
-    <script>
-        function myFunction() {
-            var course = event.srcElement.innerHTML;
-            //var submit = alert("Thank you for submitting.");
-            location.reload();
-            window.scrollTo(-100, -100);
-        }
-    </script>
+    <!-- Custom styles for all yo' stylin' needs playa'-->
+    <link href="css/main.min.css" rel="stylesheet">
 
   </head>
 
@@ -66,7 +42,7 @@
 
     <!-- Page Content -->
     <div class="container">
-        <div class="alert alert-success alert-dismissable fadein">
+        <div class="alert alert-success alert-dismissable" id="alholder">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
             Thank you for submitting.
         </div>
@@ -74,14 +50,14 @@
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">Mentoring-Tracker</h1>
           <p class="lead">Select the course you are seeking mentoring help for.</p>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">CS1</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">CS2</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">CSAPx</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">SWEN-261</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">SWEN-256</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">SWEN-262</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">other SWEN</button>
-            <button class="btn btn-primary" onclick="myFunction()" type="button">not listed</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="cs1">CS1</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="cs2">CS2</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="csapx">CSAPx</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="swen261">SWEN-261</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="swen256">SWEN-256</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="swen262">SWEN-262</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="os">other SWEN</button>
+            <button class="btn btn-primary course-btn" type="button" data-course="nl">not listed</button>
         </div>
       </div>
     </div>
@@ -89,7 +65,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="js/main.min.js"></script>
   </body>
 
 </html>
