--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="alert alert-success alert-dismissable" id="alholder">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+            <a href="#" class="close" data-dismiss="alert" aria-label="close" id="clbtn">×</a>
             Thank you for submitting.
         </div>
       <div class="row">
@@ -65,6 +65,22 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-database.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "",
+        authDomain: "",
+        databaseURL: "",
+        projectId: "",
+        storageBucket: "",
+        messagingSenderId: ""
+      };
+      firebase.initializeApp(config);
+    </script>
     <script src="js/main.min.js"></script>
   </body>
 
