Added Firebase scripts

--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "",
-        authDomain: "",
-        databaseURL: "",
-        projectId: "",
+        apiKey: "AIzaSyDx9R1p1qJhT75f6CVb1XopceehTXcPBps",
+        authDomain: "lab-tracker-11575.firebaseapp.com",
+        databaseURL: "https://lab-tracker-11575.firebaseio.com",
+        projectId: "lab-tracker-11575",
         storageBucket: "",
-        messagingSenderId: ""
+        messagingSenderId: "973406663756"
       };
       firebase.initializeApp(config);
     </script>
