Firebase, minimal working stage

--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+
+
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyDx9R1p1qJhT75f6CVb1XopceehTXcPBps",
-        authDomain: "lab-tracker-11575.firebaseapp.com",
-        databaseURL: "https://lab-tracker-11575.firebaseio.com",
-        projectId: "lab-tracker-11575",
-        storageBucket: "",
-        messagingSenderId: "973406663756"
+          apiKey: "AIzaSyDx9R1p1qJhT75f6CVb1XopceehTXcPBps",
+          authDomain: "lab-tracker-11575.firebaseapp.com",
+          databaseURL: "https://lab-tracker-11575.firebaseio.com",
+          projectId: "lab-tracker-11575",
+          storageBucket: "lab-tracker-11575.appspot.com",
+          messagingSenderId: "973406663756"
       };
       firebase.initializeApp(config);
     </script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
