--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li class="nav-item active">
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://sse.rit.edu/go/tracker-feedback">Feed Back</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://github.com/rit-sse/lab-tracker">Source</a>
             </li>
             <li class="nav-item">
